# spotifyEnableDevTools

./: CMakeLists.txt  appIcon.rc  main.cpp  readme.md  spotify.cpp  spotify.h
.github/workflows/: CI.yml
